; ModuleID = '/home/carl/AnghaBench/libgit2/tests/repo/extr_repo_helpers.c_create_tmp_global_config.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/repo/extr_repo_helpers.c_create_tmp_global_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4
@GIT_OPT_SET_SEARCH_PATH = common dso_local global i32 0, align 4
@GIT_CONFIG_LEVEL_GLOBAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [11 x i8] c".gitconfig\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @create_tmp_global_config(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_5__, align 4
  %8 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = bitcast %struct.TYPE_5__* %7 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 bitcast (%struct.TYPE_5__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %10 = load i32, i32* @GIT_OPT_SET_SEARCH_PATH, align 4
  %11 = load i32, i32* @GIT_CONFIG_LEVEL_GLOBAL, align 4
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @git_libgit2_opts(i32 %10, i32 %11, i8* %12)
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @p_mkdir(i8* %15, i32 511)
  %17 = call i32 @cl_must_pass(i32 %16)
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @git_buf_joinpath(%struct.TYPE_5__* %7, i8* %18, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %20 = call i32 @cl_git_pass(i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @git_config_open_ondisk(i32** %8, i32 %22)
  %24 = call i32 @cl_git_pass(i32 %23)
  %25 = load i32*, i32** %8, align 8
  %26 = load i8*, i8** %5, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @git_config_set_string(i32* %25, i8* %26, i8* %27)
  %29 = call i32 @cl_git_pass(i32 %28)
  %30 = load i32*, i32** %8, align 8
  %31 = call i32 @git_config_free(i32* %30)
  %32 = call i32 @git_buf_dispose(%struct.TYPE_5__* %7)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_libgit2_opts(i32, i32, i8*) #2

declare dso_local i32 @cl_must_pass(i32) #2

declare dso_local i32 @p_mkdir(i8*, i32) #2

declare dso_local i32 @git_buf_joinpath(%struct.TYPE_5__*, i8*, i8*) #2

declare dso_local i32 @git_config_open_ondisk(i32**, i32) #2

declare dso_local i32 @git_config_set_string(i32*, i8*, i8*) #2

declare dso_local i32 @git_config_free(i32*) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_5__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
